# wrpc

./: .gitignore  Cargo.toml  README.md  test.wrpc
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: ast.rs  builtin.wrpc  canonicalize.rs  codegen.rs  docs.rs  error.rs  lib.rs  parse.rs  reporting.rs
crates/compiler/src/ast/: canonical.rs  constraints.rs  source.rs
crates/compiler/src/codegen/: ast.rs  command.rs  kotlin.rs  rust.rs  typescript.rs
crates/compiler/src/codegen/kotlin/: json.kt  result.kt
crates/compiler/src/error/: canonicalize.rs  syntax.rs
crates/compiler/src/parse/: lexer.rs  token.rs
crates/compiler/templates/: index.html  record.kt
crates/compiler/templates/kotlin/: enum.kt  record.kt  request.kt  service.kt
crates/compiler/templates/typescript/: client.ts  enum.ts  record.ts
crates/server/: Cargo.toml
crates/server/src/: lib.rs
