[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
itertools = "0.13.0"
markdown = "0.3.0"
pretty = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
