[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
compiler = { path = "../compiler" }
axum = { version = "0.7.5", features = ["query"] }
axum-extra = { version = "0.9.3", features = ["query"] }
axum-macros = "0.4.1"
chrono = { version = "0.4.33", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.1", features = [
    "add-extension",
    "trace",
    "fs",
    "compression-gzip",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
